--- a/server/crmBookingSystem/src/main/resources/application.properties
+++ b/server/crmBookingSystem/src/main/resources/application.properties
@@ -8,3 +8,13 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=maximillian.cardwell@gmail.com
+
+spring.mail.password=duaeshhtxgcbuyjp
+
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
